Final version to qualification

--- a/Qualificação.tex
+++ b/Qualificação.tex
@@ -335,7 +335,7 @@ No trabalho proposto por \citeonline{DBLP:journals/corr/SzegedyLJSRAEVR14} para 
 
 No trabalho apresentado por \citeonline{DBLP:journals/corr/SimonyanZ14a} para a competição de ILSVRC de 2015, propôs-se uma RNC com 19 camadas, o que segue o mesmo princípio de aumentar a profundidade da RNC assim como em Szegedy et. al (2015). Entretanto, o resultado foi melhor no que se refere à localização de objetos. Diferentemente de \citeonline{DBLP:journals/corr/SzegedyLJSRAEVR14}, \citeonline{DBLP:journals/corr/SimonyanZ14a} usaram uma estrutura de rede mais simples.
 
-O gargalo computacional atual da detecção de objetos através de RNC, segundo  \citeonline{DBLP:journals/corr/RenHG015} é o região, dentro da imagem, onde a RNC irá analisar a detecção de objetos. Por esta razão, \citeonline{DBLP:journals/corr/RenHG015} propuseram uma RNC chamada de "Faster R-CNN". Para a geração de regiões, treina-se uma RNC totalmente conectada para detectar os limites dos objetos e uma pontuação do objeto para cada posição. A saída da camada convolucional gera um mapa de características usadas tanto para gerar as regiões propostas de localização dos objetos, quanto como entrada para uma outra RNC para a atividade de detecção. Por essa razão, as propostas de regiões têm custo computacional quase  zero. Obtém-se esse custo baixo de computação pelo treinamento das redes. Primeiro, treina-se a RNC com a \textit{ImageNet} para a tarefa de gerar as propostas de regiões e, depois, utilizando-se das propostas geradas pela RNC. Após essa etapa, as camadas de convolução ainda não estão conectadas; o último passo consiste em fazer a conexão entre as redes. Essa proposta de detecção de objetos consegue ser eficiente com uma taxa de 5-17 quadros por segundo.
+O gargalo computacional atual da detecção de objetos através de RNC, segundo  \citeonline{DBLP:journals/corr/RenHG015} é a região, dentro da imagem, onde a RNC irá analisar a detecção de objetos. Por esta razão, \citeonline{DBLP:journals/corr/RenHG015} propuseram uma RNC chamada de "Faster R-CNN". Para a geração de regiões, treina-se uma RNC totalmente conectada para detectar os limites dos objetos e uma pontuação do objeto para cada posição. A saída da camada convolucional gera um mapa de características usadas tanto para gerar as regiões propostas de localização dos objetos, quanto como entrada para uma outra RNC para a atividade de detecção. Por essa razão, as propostas de regiões têm custo computacional quase  zero. Obtém-se esse custo baixo de computação pelo treinamento das redes. Primeiro, treina-se a RNC com a \textit{ImageNet} para a tarefa de gerar as propostas de regiões e, depois, utilizando-se das propostas geradas pelo treinamento, treina-se novamente a RNC. Após essa etapa, as camadas de convolução ainda não estão conectadas; o último passo consiste em fazer a conexão entre as redes. Essa proposta de detecção de objetos consegue ser eficiente com uma taxa de 5-17 quadros por segundo.
 
 \citeonline{taylor-eccv-10} desenvolveram um método capaz de aprender representações de uma sequência de pares de imagens sucessivas usando fluxo ótico como entrada para a RNC, o que possibilita extrair características de movimento, segmentação e detecção de bordas. Um diferencial em relação a outros métodos propostos durante seu estudo foi a introdução de probabilidades na camada que realiza o agrupamento pelo valor máximo. 
 
@@ -345,11 +345,11 @@ Como descrito anteriormente, o uso da  RNC apresentou grandes resultados na clas
 
 \citeonline{NIPS2014_5353} propõem um novo método para reconhecimento de ações em vídeos, que consiste em analisar separadamente as partes espacial e temporal de uma sequência de quadros. A parte espacial traz informações sobre a cena e seus objetos a cada quadro; a sequência de quadros traz informações sobre o movimento da cena, da câmera e do movimento dos objetos presentes na cena. As análises espacial e temporal são implementadas separadamente, usando-se RNCs e classificação normalizada entre 0 e 1. O processo de análise da parte espacial não contempla nenhuma novidade, entretanto, na análise temporal, a entrada para a RNC é a variação do fluxo ótico ou a variação de trajetória em uma sequência consecutiva de quadros. Dessa maneira, os dados de entrada já representam um movimento, não sendo necessário que a RNC avalie se ele existe ou não. Para agregar os resultados das duas RNCs, aplicaram-se dois métodos: a média e a máquina de vetores de suporte (SVM) sobre o resultado normalizado da segunda camada de classificação.
 
-Além das RNC’s serem usadas em uma ampla lista de tarefas, utilizando-se imagens como entrada,  \citeonline{DBLP:journals/corr/RavanbakhshMRMD15} empregaram vídeos, em vez de apenas imagens,com o objetivo de reconhecer ações. Utilizando a última camada de RNC antes da camada de classificação, \citeonline{DBLP:journals/corr/RavanbakhshMRMD15} introduziram uma estrutura hierárquica capaz de capturar a variação temporal em vídeos. O referido modelo foi capaz de capturar pequenas ações dentro de ações complexas. Essas pequenas ações representaram um grau diferente de granularidade dentro da ação completa. Propôs-se a estrutura capturando-se as características espaciais. Para isso, utilizou-se a arquitetura AlexNet \citeonline{NIPS2012_4824}, treinadas com a base de dados ImageNet. As características temporais, diferentemente dos trabalhos anteriores que propunham fluxo óptico, foram adquiridas a partir de pequenos intervalos do vídeo. Nesses intervalos, computaram-se informações grosseiras das características dos quadros iniciais e finais, então, dividiu-se recursivamente o intervalo e computaram-se novamente as características até que não fosse mais possível dividir o intervalo do vídeo. Tais informações formaram uma estrutura de árvore binária, na qual os níveis que se encontram mais perto da raiz representam as informações mais grosseiras e as que se encontram mais perto das folhas apresentam as características mais finas do movimento são. Para a análise da estrutura de árvore binária, empregaram-se abordagens clássicas da visão computacional. O método de classificação proposto foi SVM não linear.
+Além das RNC’s serem usadas em uma ampla lista de tarefas, utilizando-se imagens como entrada,  \citeonline{DBLP:journals/corr/RavanbakhshMRMD15} empregaram vídeos, em vez de apenas imagens, com o objetivo de reconhecer ações. Utilizando a última camada de RNC antes da camada de classificação, \citeonline{DBLP:journals/corr/RavanbakhshMRMD15} introduziram uma estrutura hierárquica capaz de capturar a variação temporal em vídeos. O referido modelo foi capaz de capturar pequenas ações dentro de ações complexas. Essas pequenas ações representaram um grau diferente de granularidade dentro da ação completa. Propôs-se a estrutura capturando-se as características espaciais. Para isso, utilizou-se a arquitetura AlexNet \citeonline{NIPS2012_4824}, treinadas com a base de dados ImageNet. As características temporais, diferentemente dos trabalhos anteriores que propunham fluxo óptico, foram adquiridas a partir de pequenos intervalos do vídeo. Nesses intervalos, computaram-se informações grosseiras das características dos quadros iniciais e finais, então, dividiu-se recursivamente o intervalo e computaram-se novamente as características até que não fosse mais possível dividir o intervalo do vídeo. Tais informações formaram uma estrutura de árvore binária, na qual os níveis que se encontram mais perto da raiz representam as informações mais grosseiras e as que se encontram mais perto das folhas apresentam as características mais finas do movimento são. Para a análise da estrutura de árvore binária, empregaram-se abordagens clássicas da visão computacional. O método de classificação proposto foi SVM não linear.
 
 \citeonline{DBLP:journals/corr/abs-1708-02349} apresentaram uma nova abordagem para o reconhecimento de ações em vídeos. Os autores definem ações por atividades de curto espaço de tempo, enquanto uma atividade é um conjunto de ações e esse conjunto de ações é o foco do seu estudo. Para uma precisa localização de atividades humanas, propôs-se uma Rede de Contexto Temporal (TCN). Essa rede é similar a uma Rede Neural Convolucional, baseada em Regiões Rápidas (Fast-R CNN), porém apresenta um novo método para classificar múltiplas escalas temporais. Amostraram-se, no mesmo momento, características defasadas no tempo e no tamanho da amostra. Tais amostragens são a entrada para a RNC que classifica as amostras.
 
-Com o objetivo de reconhecimento de ações em vídeos,  \citeonline{DBLP:journals/corr/abs-1708-02349} propuseram uma abordagem, a “trajectory-pooled deep-convolutional descriptor” (TDD), que utiliza, além de características aprendidas através de RNC, uma técnica construída manualmente, chamada de “Improved Trajectories” (IT). A IT faz uso de Fluxo Ótico para o reconhecimento de trajetórias, como proposto por (Wang et al. apud Wang and Schmid). Apesar de TDD ser independente de IT, ela foi escolhida por apresentar um bom desempenho na detecção de trajetórias. A RNC utilizada para a TDD foi proposta por \citeonline{DBLP:journals/corr/SimonyanZ14a}, a qual é empregada para aprender um mapa de características espaciais e temporais discriminativas que, em conjunto com a IT, retornaram os descritores da TDD
+Com o objetivo de reconhecimento de ações em vídeos, \citeonline{DBLP:journals/corr/abs-1708-02349} propuseram uma abordagem, “trajectory-pooled deep-convolutional descriptor” (TDD), que utiliza, além de características aprendidas através de RNC, uma técnica construída manualmente, chamada de “Improved Trajectories” (IT). A IT faz uso de fluxo ótico para o reconhecimento de trajetórias, como proposto por (Wang et al. apud Wang and Schmid). Apesar de TDD ser independente de IT, ela foi escolhida por apresentar um bom desempenho na detecção de trajetórias. A RNC utilizada para a TDD foi proposta por \citeonline{DBLP:journals/corr/SimonyanZ14a}, a qual é empregada para aprender um mapa de características espaciais e temporais discriminativas que, em conjunto com a IT, retornaram os descritores da TDD.
 
 Para melhorar a demanda computacional que o fluxo ótico exige, \citeonline{DBLP:journals/corr/ZhangWWQW16} propõem utilizar vetores de movimento. Com isso, demonstram que sua proposta pode realizar reconhecimento de ações em tempo real, pois as ações podem ser obtidas diretamente durante o processo de decodificação do vídeo. Além da melhoria computacional, para melhorar a performance do reconhecimento das ações, treinam-se as RNCs com os vetores de movimentos e o fluxo ótico.
 
@@ -371,7 +371,7 @@ Neste trabalho, a representação do domínio de tráfego de veículos e suas re
 
 Classificam-se os sistemas de segurança veicular, segundo  \citeonline{8429957}, em dois tipos: passivos e ativos. Os sistemas passivos de segurança têm como objetivo proteger de ferimentos os ocupantes dos veículos depois de uma colisão. Alguns exemplos são os cintos de segurança, os \textit{air bags}, o painel de instrumentos acolchoados, entre outros. Os sistemas de segurança ativos, por outro lado, têm como principal objetivo prevenir as colisões. Denominam-se esses sistemas de Sistemas Avançados de Assistência ao Motorista (ADAS).
 
-A predição automática de risco de trânsito é um dos principais interesses dos ADAS. Em \citeonline{Inoue} 2015) propõem-se um novo modelo de predição de risco utilizando raciocínio com inferência pela melhor explicação em lógica de primeira ordem. Para melhorar a inferência, empregou-se um algoritmo de aprendizado de máquina visto em \citeonline{Wang:2012:ESC:3042573.3042591} cujo objetivo é definir um peso para cada hipótese e, com isso, melhorar a robustez da predição do modelo. Fazendo-se uso de potenciais riscos já estabelecidos pelo centro de educação da Toyota e de outros materiais coletados de lições de trânsito, propuseram-se 93 riscos para a base de conhecimento.
+A predição automática de risco de trânsito é um dos principais interesses dos ADAS. Em \citeonline{Inoue} propõem-se um novo modelo de predição de risco utilizando raciocínio com inferência pela melhor explicação em lógica de primeira ordem. Para melhorar a inferência, empregou-se um algoritmo de aprendizado de máquina visto em \citeonline{Wang:2012:ESC:3042573.3042591} cujo objetivo é definir um peso para cada hipótese e, com isso, melhorar a robustez da predição do modelo. Fazendo-se uso de potenciais riscos já estabelecidos pelo centro de educação da Toyota e de outros materiais coletados de lições de trânsito, propuseram-se 93 riscos para a base de conhecimento.
 
 Uma revisão feita sobre o estágio atual do ADAS, \citeonline{6936444} avaliaram que, atualmente, os sensores presentes nos carros são capazes de receber informações detalhadas sobre o meio onde está o veículo. Entretanto, a avaliação de percepção e os alertas de situação realizados pelos controladores dos carros ainda estão iniciando sua aplicação. Por essa razão, afirmam que é necessário haver progresso nas áreas de classificação de cenas como, por exemplo: reconhecimento de objetos em condições dinâmicas, compreensão contextual de cenas, inferência sobre a relação entre objetos dinâmicos e a infraestrutura de trânsito. Com o desenvolvimento da área de classificação de cenas, em conjunto com o progresso do \textit{hardware} e do \textit{software}, espera-se que se estabeleça no mercado automotivo um alto nível de Inteligência Artificial. A predição probabilística de comportamentos futuros, tanto dos veículos como de todos os objetos que fazem parte da cena, deve ser levada em conta por meio de inferência da intenção dos objetos nela presentes e também do modelamento do comportamento desses objetos.
 
@@ -477,7 +477,7 @@ Um neurônio de entrada única pode ser visto na figura \ref{fig:Neurônio_geral
   \end{figure}
   
   \item Função \textit{Log-sigmoide}\\
-  A entrada para a função log-sigmoide, figura \ref{fig:Sigmoid}, varia de $\pm$  $\infty$ e limita a saída entre 0 e 1, de acordo com a equação \ref{eq:sigmoid}. Este tipo de função é muito usada em redes com muitas camadas e que são treinadas usando algoritmos de retropropagação de erro, em especial porque esta função pode ser derivada.
+  A entrada para a função log-sigmoide, figura \ref{fig:Sigmoid}, varia entre $\pm$  $\infty$ e limita a saída entre 0 e 1, de acordo com a equação \ref{eq:sigmoid}. Este tipo de função é muito usada em redes com muitas camadas e que são treinadas usando algoritmos de retropropagação de erro, em especial porque esta função pode ser derivada.
   
   
   \begin{equation}
@@ -563,8 +563,8 @@ Cada linha da matriz \textbf{W}, de acordo com a equação \ref{eq:matriz_pond} 
 
 \subsection {Neurônios de múltiplas camadas} 
 
-Em uma rede com vários neurônios, como visto na figura \ref{fig:Neuronio_multipla_camada}, cada camada tem sua própria matriz de ponderação \textbf{W}, seus próprios vetores de erro \textbf{b}, de entrada \textit{n} e uma saída \textbf{a}. Para definir todos esses elementos de cada camada, inclui-se um índice sobrescrito foi incluído em cada termo. A camada de saída é a própria saída da rede. Todas as outras camadas são denominadas de camadas ocultas. 
-Redes Neurais multicamadas tem mais capacidade de resolver problemas que as redes simples. Por exemplo, uma rede de duas camadas tendo uma \textit{log-sigmoide} na primeira camada e uma linear na segunda pode ser treinada para aproximar funções, porém as de camada única não. 
+Em uma rede com vários neurônios, como visto na figura \ref{fig:Neuronio_multipla_camada}, cada camada tem sua própria matriz de ponderação \textbf{W}, seus próprios vetores de erro \textbf{b}, de entrada \textit{n} e uma saída \textbf{a}. Para definir todos esses elementos de cada camada, inclui-se um índice sobrescrito em cada termo. A camada de saída é a própria saída da rede. Todas as outras camadas são denominadas de camadas ocultas. 
+Redes neurais multicamadas tem mais capacidade de resolver problemas que as redes simples. Por exemplo, uma rede de duas camadas tendo uma \textit{log-sigmoide} na primeira camada e uma linear na segunda pode ser treinada para aproximar funções, porém as de camada única não. 
 
 \begin{figure}[H]
     \centering
@@ -589,9 +589,9 @@ As redes neurais recorrentes são redes com realimentação de informações da 
 
 \subsection{Redes neurais de alimentação direta}
 
-As técnicas modernas utilizada em aprendizado de máquina são uma estrutura poderosa para o aprendizado supervisionado de acordo com \citeonline{Goodfellow-et-al-2016}. Uma RNA pode aumentar sua complexidade adicionando-se mais camadas ou mesmo mais entradas em cada camada. 
+As técnicas modernas utilizadas em aprendizado de máquina são uma estrutura poderosa para o aprendizado supervisionado de acordo com \citeonline{Goodfellow-et-al-2016}. Uma RNA pode aumentar sua complexidade adicionando-se mais camadas ou mesmo mais entradas em cada camada. 
 
-Nesta seção, mostra-se o modelo básico de uma RNA, segundo \citeonline{Neural_Network_Design} o modelo básico de uma RNA, chamado de Perceptron. 
+Nesta seção, mostra-se o modelo básico de uma RNA, segundo \citeonline{Neural_Network_Design}. Este modelo básico é chamado de Perceptron. 
 
 %e as RNC's que são atualmente utilizadas para atividades de reconhecimento e detecção de objetos em imagens.%
 
@@ -707,7 +707,7 @@ No exemplo da figura \ref{fig:convolução}, há uma imagem binária de 5x5 util
     \label{fig:convolução}
 \end{figure}
 
-A convolução traz três importantes ideias com ajudam a melhorar o sistema de aprendizado de máquina:
+A convolução traz três importantes ideias que ajudam a melhorar o sistema de aprendizado de máquina:
 
 \begin{itemize}
     \item Interações esparsas: em RNAs tradicionais, multiplica-se uma matriz por outra matriz, ou seja, toda saída interage com toda entrada. Nas RNCs, utiliza-se um kernel muito menor do que o tamanho da entrada, o que significa uma grande redução de memória e que a computação da saída requer menos operações. No exemplo da figura \ref{fig:esparso}, uma entrada \textit{$x_3$} e as saídas \textit{s}, que estão em destaque, mostram que utilizando um kernel de tamanho 3, apenas três saídas são impactadas por \textit{x} (superior). Por outro lado, quando a saída \textit{s} é resultado de uma multiplicação de matrizes, a conectividade não é mais esparsa e portanto todas as saídas são afetadas por uma única entrada \textit{$x_3$} (inferior).
@@ -855,7 +855,7 @@ $p(X, Y) :- e(X, Y). $ \newline
 
 $p(X, Y) :- e(X, X1), p(X1, Y). $ \newline
 
-O fato $0.6::e(a, b)$ expressa uma ligação existente ente os nós $a$ e $b$, com probabilidade de $0.6$. Todos os possíveis nós de um grafo são representados dessa maneira Nós que não existirem podem ser omitidos ou serem declarados com probabilidade zero. Por exemplo: um nó de $b$ para $a$ seria expresso da seguinte modo $0.0::e(b, a)$.
+O fato $0.6::e(a, b)$ expressa uma ligação existente ente os nós $a$ e $b$, com probabilidade de $0.6$. Todos os possíveis nós de um grafo são representados dessa maneira Nós que não existirem podem ser omitidos ou serem declarados com probabilidade zero. Por exemplo: um nó de $b$ para $a$ seria expresso da seguinte modo: $0.0::e(b, a)$.
 
 Um átomo que se unifica com fato probabilístico é chamado de \textit{átomo probabilístico} e um átomo que se unifica com a cabeça de uma regra, de \textit{átomo derivado}. Um conjunto de átomos derivados e de átomos probabilísticos de um programa em ProbLog é uma disjunção. Tomando a figura \ref{fig:graph_acyclic} como exemplo tem-se:
 
@@ -937,17 +937,17 @@ A pesquisa $p(a, c)$ realizada para o grafo da figura \ref{fig:graph_acyclic} é
 A linguagem \textit{ProbLog} realiza os seguintes tipos de inferência:
 
 \begin{itemize}
-    \item probabilidade Marginal: sendo $L$ um programa em \textit{ProbLog} e um conjunto de átomos probabilísticos $At$ e uma pergunta $Q \subseteq At$ é soma de todas as probabilidades, onde a pergunta $q \in Q$ é verdade para um programa em \textit{ProbLog} $L: P(q)$. No exemplo da tabela \ref{tab: possiveis mundos}, é a soma das probabilidades que estão em negrito, $p(a, c)=0,636$.
+    \item probabilidade marginal: sendo $L$ um programa em \textit{ProbLog} e um conjunto de átomos probabilísticos $At$ e uma pergunta $Q \subseteq At$ é soma de todas as probabilidades, onde a pergunta $q \in Q$ é verdade para um programa em \textit{ProbLog} $L: P(q)$. No exemplo da tabela \ref{tab: possiveis mundos}, é a soma das probabilidades que estão em negrito, $p(a, c)=0,636$.
     
-    \item probabilidade Condicional: é o calculo da probabilidade, dadas as evidências observadas. Evidências são um conjunto de tuplas de átomos e seus respectivos valores verdades observados. Formalmente uma evidência é $E=e$, onde $E \subset At$ é o conjunto de átomos e $e$ é o conjunto de valores verdade observados. A probabilidade condicional de uma pesquisa $q \in Q$ é o cálculo da relação \(P(q|E=e)=\frac{P(q\wedge E=e)}{P(E=e)}\). No exemplo do grafo acíclico da tabela \ref{tab: possiveis mundos} para a pesquisa $p(a,c)$ dado como evidência que o $nó(a,c)=falso$, temos: $P(p(a, c)|e(a, c) = false) =0.48$ 
+    \item probabilidade condicional: é o calculo da probabilidade, dadas as evidências observadas. Evidências são um conjunto de tuplas de átomos e seus respectivos valores verdades observados. Formalmente uma evidência é $E=e$, onde $E \subset At$ é o conjunto de átomos e $e$ é o conjunto de valores verdade observados. A probabilidade condicional de uma pesquisa $q \in Q$ é o cálculo da relação \(P(q|E=e)=\frac{P(q\wedge E=e)}{P(E=e)}\). No exemplo do grafo acíclico da tabela \ref{tab: possiveis mundos} para a pesquisa $p(a,c)$ dado como evidência que o $nó(a,c)=falso$, temos: $P(p(a, c)|e(a, c) = false) =0.48$ 
     
-    \item máximo a Posteriori: além do máximo a posteriori, calcula também seu caso especial: explicação mais provável. Dado um programa $L$ em \textit{ProbLog} e um conjunto de átomos $At$, uma pesquisa $Q$ e evidências $E=e$ em que $\{Q \cup E\}\subset At$, o cálculo de máximo a posteriori é encontrar os átomos probabilísticos mais prováveis para cada átomo probabilístico da pesquisa, em que as evidências estão no estado determinado na pesquisa. No cálculo da explicação mais provável, o valor máximo de $argmax_\textbf{p}P(Q=q|E=e)$ onde $\textbf{q}$ é um conjunto dos valores verdade para cada $q\in Q$. No exemplo do grafo acíclico da tabela \ref{tab: possiveis mundos}, dada a evidência $nó(a,b)= falso$ o estado que demostra a explicação mais provável é $w7$ com $P=0,224$, pois tem a maior probabilidade dentre todas os possíveis mundo dado que $nó(a,b)= falso$.
+    \item máximo a posteriori: além do máximo a posteriori, calcula também seu caso especial: explicação mais provável. Dado um programa $L$ em \textit{ProbLog} e um conjunto de átomos $At$, uma pesquisa $Q$ e evidências $E=e$ em que $\{Q \cup E\}\subset At$, o cálculo de máximo a posteriori é encontrar os átomos probabilísticos mais prováveis para cada átomo probabilístico da pesquisa, em que as evidências estão no estado determinado na pesquisa. No cálculo da explicação mais provável, o valor máximo de $argmax_\textbf{p}P(Q=q|E=e)$ onde $\textbf{q}$ é um conjunto dos valores verdade para cada $q\in Q$. No exemplo do grafo acíclico da tabela \ref{tab: possiveis mundos}, dada a evidência $nó(a,b)= falso$ o estado que demostra a explicação mais provável é $w7$ com $P=0,224$, pois tem a maior probabilidade dentre todas os possíveis mundo dado que $nó(a,b)= falso$.
     
 \end{itemize} 
 
 Programas em \textit{Problog} podem aprender parâmetros dado parciais interpretações do próprio programa. Uma interpretação parcial é um conjunto de átomos com seus respectivos valores observados. Para um dado programa em \textit{Problog}, que contenha um conjunto de fatos probabilísticos com valores das probabilidades desconhecidos, a tarefa de aprendizado através de interpretações calcula as probabilidades através do método de explicação mais provável dos fatos probabilísticos, dadas as evidência de alguns átomos. Este tipo de aprendizagem também utiliza inferência condicional para atualizar as probabilidades dos fatos probabilísticos iniciais até sua convergência..
 
-Neste capítulo foram apresentadas as teorias de redes neurais e lógica probabilística que serão necessárias para a base te]orica da proposta deste trabalho. No próximo capítulo é apresentada a proposta deste trabalho, e mostrará como serão utilizadas as Redes Neurais e a Lógica probabilística como ferramentas para a criação de um sistema de auxílio ao motorista, com o objetivo de classificar automaticamente o risco de colisão entre automóveis.
+Neste capítulo foram apresentadas as teorias de redes neurais e lógica probabilística que serão necessárias para a base teórica da proposta deste trabalho. No próximo capítulo é apresentada a proposta deste trabalho, e mostrará como serão aplicadas as redes neurais e a lógica probabilística como ferramentas para a criação de um sistema de auxílio ao motorista, com o objetivo de classificar automaticamente o risco de colisão entre automóveis.
 
 
 %\subsubsection{Funções do programa}
@@ -999,7 +999,7 @@ Indica-se abaixo o funcionamento de cada etapa enumerada na figura \ref{fig:diag
         
     \item[{(4)}] A saída classificada em (3) será utilizada como evidência sobre o contexto da cena contida na sequência de quadros utilizados em (1) como entrada para a RNC. No exemplo da figura \ref{fig:diagrama_de_blocos} tem-se:
         \begin{itemize}
-            \item Automóvel = \textit{verdadeiro} (v).
+            \item Automóvel = \textit{verdadeiro} (\textit{v}).
             \item Sinalização de solo de conversão a direita  = \textit{v}.
         \end{itemize}    
         
@@ -1030,7 +1030,7 @@ Indica-se abaixo o funcionamento de cada etapa enumerada na figura \ref{fig:diag
             - Existe probabilidade de colisão dada a conversão de automóvel.\newline
             0.75::colisao :- conversao.\newline
 
-           \item O artigo 32 do Código Brasileiro de Trânsito diz que: "O condutor não poderá ultrapassar veículos em vias com duplo sentido de direção e pista única, nos trechos em curvas e em aclives sem visibilidade suficiente, nas passagens de nível, nas pontes e viadutos e nas travessias de pedestres, exceto quando houver sinalização permitindo a ultrapassagem.". De acordo com o artigo citado, propuseram-se três regras, que incluem o sentido da via e a existência de pista única. Para o exemplo da figura  \ref{fig:diagrama_de_blocos}, as outras regras do artigo 32 do Código Brasileiro de Trânsito não foram codificadas em regras probabilísticas. Existe probabilidade de uma ultrapassagem de risco acontecer e também de ser proibida pelo Código Brasileiro de Trânsito, tendo-se em vista a existência de um automóvel, a sinalização de solo de conversão à direita e as placas de sentido da via. Portanto, as seguintes regras foram modeladas:\newline
+           \item O artigo 32 do Código Brasileiro de Trânsito diz que: "O condutor não poderá ultrapassar veículos em vias com duplo sentido de direção e pista única, nos trechos em curvas e em aclives sem visibilidade suficiente, nas passagens de nível, nas pontes e viadutos e nas travessias de pedestres, exceto quando houver sinalização permitindo a ultrapassagem.". De acordo com o artigo citado, propuseram-se três regras, que incluem o sentido da via e a existência de pista única. Para o exemplo da figura  \ref{fig:diagrama_de_blocos}, as outras regras do artigo 32 do Código Brasileiro de Trânsito não foram codificadas em regras probabilísticas. Existe probabilidade de uma ultrapassagem de risco acontecer e também de ser proibida pelo Código Brasileiro de Trânsito, tendo-se em vista a existência de um automóvel, a sinalização de solo de conversão à direita e as placas de sentido da via. Portanto, as seguintes regras probabilísticas foram modeladas:\newline
            
             - Existe probabilidade de acontecer uma ultrapassagem de risco se existir um carro, se não houver placa indicando via de mão dupla nem placa indicando via de mão simples.\newline               
             0.90::risco\_ultrapassagem :-\newline
